<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/QuestionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DummyTitle"
        android:textStyle="bold"
        android:textSize="@dimen/IssueSize"
        app:layout_constraintBottom_toTopOf="@+id/Separator"
        app:layout_constraintStart_toEndOf="@+id/QuestionNumber" />

    <ImageView
        android:id="@+id/Separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/QuestionSeparatorHeight"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Separator"
        android:paddingTop="@dimen/ImageVsTextCompensation"
        app:layout_constraintEnd_toStartOf="@+id/QuestionBody"
        app:srcCompat="@drawable/nationalgeographicrectangle" />

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QuestionNumber"
        app:layout_constraintBottom_toBottomOf="@+id/Separator"
        app:layout_constraintEnd_toEndOf="@+id/Separator"
        app:layout_constraintStart_toStartOf="@+id/Separator"
        app:layout_constraintTop_toTopOf="@+id/Separator" />

    <TextView
        android:id="@+id/QuestionBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/HalfGigaPadding"
        android:layout_marginEnd="@dimen/StandardPadding"
        android:text="@string/DummyQuestion"
        android:textSize="@dimen/QuestionSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Separator" />

    <TextView
        android:id="@+id/TrueFalseSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TrueFalseSeparator"
        app:layout_constraintBottom_toBottomOf="@+id/TrueButton"
        app:layout_constraintEnd_toEndOf="@+id/QuestionBody"
        app:layout_constraintStart_toStartOf="@+id/QuestionBody"
        app:layout_constraintTop_toTopOf="@+id/TrueButton" />

    <ImageButton
        android:id="@+id/TrueButton"
        android:layout_width="@dimen/TrueFalseHeight"
        android:layout_height="@dimen/TrueFalseHeight"
        android:layout_margin="@dimen/KiloPadding"
        android:background="@null"
        android:contentDescription="@string/TrueDescription"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/TrueFalseSeparator"
        app:layout_constraintTop_toBottomOf="@+id/QuestionBody"
        app:srcCompat="@drawable/greencheck" />

    <ImageButton
        android:id="@+id/FalseButton"
        android:layout_width="@dimen/TrueFalseHeight"
        android:layout_height="@dimen/TrueFalseHeight"
        android:layout_margin="@dimen/KiloPadding"
        android:background="@null"
        android:contentDescription="@string/FalseDescription"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/TrueFalseSeparator"
        app:layout_constraintTop_toBottomOf="@+id/QuestionBody"
        app:srcCompat="@drawable/bigredx" />

</android.support.constraint.ConstraintLayout>