<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/QuestionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/MegaPadding"
        android:layout_marginTop="@dimen/KiloPadding"
        android:text="@string/DummyTitle"
        android:textSize="@dimen/IssueSize"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/StandardPadding">

        <ImageView
            android:id="@+id/Separator"
            android:layout_width="@dimen/QuestionSeparatorHeight"
            android:layout_height="@dimen/QuestionSeparatorHeight"
            android:adjustViewBounds="true"
            android:contentDescription="@string/Separator"
            app:srcCompat="@drawable/nationalgeographicrectangle" />

        <TextView
            android:id="@+id/QuestionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/Separator"
            android:layout_alignEnd="@id/Separator"
            android:layout_alignStart="@+id/Separator"
            android:layout_alignTop="@id/Separator"
            android:gravity="center"
            android:text="@string/QuestionNumber" />

        <TextView
            android:id="@+id/QuestionBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/Separator"
            android:text="@string/DummyQuestion"
            android:textSize="@dimen/QuestionSize" />

        <LinearLayout
            android:id="@+id/questionGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/QuestionBody"
            android:layout_alignStart="@id/QuestionBody"
            android:layout_below="@id/QuestionBody"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/TrueButton"
                android:layout_width="@dimen/TrueFalseHeight"
                android:layout_height="@dimen/TrueFalseHeight"
                android:layout_margin="@dimen/KiloPadding"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/TrueDescription"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/greencheck" />

            <TextView
                android:id="@+id/TrueFalseSeparator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/TrueFalseSeparator"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/FalseButton"
                android:layout_width="@dimen/TrueFalseHeight"
                android:layout_height="@dimen/TrueFalseHeight"
                android:layout_margin="@dimen/KiloPadding"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/FalseDescription"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/bigredx" />

        </LinearLayout>

    </RelativeLayout>

</merge>