<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/QuestionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/DummyTitle"
        android:textSize="@dimen/IssueSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Separator"
        app:layout_constraintStart_toEndOf="@+id/QuestionNumber"
        app:layout_constraintEnd_toEndOf="@id/QuestionBody"/>

    <ImageView
        android:id="@+id/Separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/QuestionSeparatorHeight"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Separator"
        android:paddingTop="@dimen/ImageVsTextCompensation"
        app:layout_constraintEnd_toStartOf="@+id/QuestionBody"
        app:srcCompat="@drawable/nationalgeographicrectangle" />

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QuestionNumber"
        app:layout_constraintBottom_toBottomOf="@+id/Separator"
        app:layout_constraintEnd_toEndOf="@+id/Separator"
        app:layout_constraintStart_toStartOf="@+id/Separator"
        app:layout_constraintTop_toTopOf="@+id/Separator" />

    <TextView
        android:id="@+id/QuestionBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/StandardPadding"
        android:layout_marginStart="@dimen/HalfGigaPadding"
        android:text="@string/DummyQuestion"
        android:textSize="@dimen/QuestionSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Separator" />

    <EditText
        android:id="@+id/AnswerText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:inputType="text"
        android:textColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/QuestionBody"
        app:layout_constraintEnd_toEndOf="@+id/QuestionBody"
        app:layout_constraintStart_toStartOf="@+id/QuestionBody"
        app:layout_constraintTop_toTopOf="@+id/QuestionBody" />

</merge>