<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.histoquiz.MainActivity">

    <ScrollView
        android:id="@+id/QuestionScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- Header. I set this focusable to make sure the activity starts from the top -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/StandardPadding"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/NationalGeographicLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/HeaderHeight"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/NGLogo"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/nationalgeographiclogo" />

                <ImageView
                    android:id="@+id/HistoQuizLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/HeaderHeight"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/HistoQuizLogo"
                    android:padding="@dimen/StandardPadding"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/histoquiz" />

            </LinearLayout>

            <TextView
                android:id="@+id/IssueNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/KiloPadding"
                android:text="@string/Issue"
                android:textAlignment="center"
                android:textSize="@dimen/IssueSize" />

            <!-- Question (the job is done programmatically -->

            <LinearLayout
                android:id="@+id/QuestionList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/SubmitButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/MegaPadding"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:onClick="submit"
                    android:text="@string/SubmitButton" />

                <Button
                    android:id="@+id/ResetButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/MegaPadding"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:onClick="viewReset"
                    android:text="@string/ResetButton" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- Progresses -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/FooterHeight"
        android:layout_margin="@dimen/StandardPadding"
        android:orientation="vertical"
        android:padding="@dimen/StandardPadding">

        <ProgressBar
            android:id="@+id/QuizProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="@dimen/GigaPadding"
            android:paddingStart="@dimen/GigaPadding"
            android:progress="50" />

        <TextView
            android:id="@+id/CompletionText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:text="@string/CompletedNumber"
            android:textAlignment="center" />

    </LinearLayout>


</LinearLayout>
